# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
brain_games/scripts/: brain_even.py  game.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
