[tool.poetry]
name = "iselldonuts_brain_games"
version = "0.3.0"
description = ""
authors = ["Valentin Khokhlov"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
