[tool.poetry]
name = "iselldonuts_brain_games"
version = "1.0.0"
description = "Collection of small games for your brain"
authors = ["Valentin Khokhlov <mananathen@gmail.com>"]
license = "MIT"

keywords = ["games", "cli", "puzzle"]

packages = [
  { include = "brain_games" },
]

classifiers = [
  "Environment :: Console",
  "Topic :: Games/Entertainment :: Puzzle Games"
]

repository = "https://github.com/iselldonuts/python-project-lvl1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
